# tc2025_shysgmt

./: .gitignore  README.md  pyproject.toml
libs/analysis/: behavior_across_session.py  behavior_single_session.py  spikes.py
libs/handle/: copy.py  dataset.py
libs/prep_behavior/: generate_procTeensy_and_event.py  generate_trials.py  procTeensy_to_pkl.py
libs/prep_neuropixels/: processed_data.py  spike_interface.py  sync.py
libs/utils/: internet_speed.py  utils.py
libs/visualization/: behavior_across_session.py  behavior_single_session.py  spikes_single_session.py
notebook/: quality_metrics.ipynb  sorting.ipynb  spike_analysis.ipynb  sync.ipynb
